--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -87,6 +87,10 @@
 .overflow-break {
   overflow-wrap: break-word !important;
 }
+
+.height-auto {
+  height: auto !important;
+}
 /*******************************************************************************/
 
 /***************************Shorten long text with***************************...*/
@@ -157,8 +161,8 @@ div.limited-character.universal {
 .full-border.mat-form-field input {
   border: 2px solid $icon-color-gray;
 }
-.no-border{
-  border:0 !important;
+.no-border {
+  border: 0 !important;
 }
 /***************************************************************************************/
 
@@ -841,18 +845,18 @@ td.mat-footer-cell:first-of-type {
   }
 }
 
-.outline-0{
+.outline-0 {
   outline: 0 !important;
-  &:hover{
+  &:hover {
     outline: 0;
   }
 }
 
-.d-contents{
+.d-contents {
   display: contents !important;
 }
 
-.bg-shadow-1px{
+.bg-shadow-1px {
   box-shadow: 0 0 1px rgba(0, 0, 0, 0.5) !important;
 }
 
