--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -26,11 +26,7 @@
       </span>
     </div>
 
-    <div
-      class="col-xs-12 text-right m-itm"
-      [ngClass]="isMobile ? 'p-t-5 p-b-10' : 'p-t-10 p-b-20'"
-      *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null"
-    >
+    <div class="col-xs-12 text-right m-itm" [ngClass]="isMobile ? 'p-t-5 p-b-10' : 'p-t-10 p-b-20'" *ngIf="rfqData.rfqCurrency != null && rfqData.rfqCurrency.exchangeCurrencyName != null">
       <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy p-rem-r-5 p-rem-r-5' : 'p-t-10 p-b-10'">
         <span class="font-size-vary-grn color-grey">
           <img width="25px" *ngIf="rfqData.rfqCurrency.exchangeCurrencyFlag" [src]="rfqData.rfqCurrency.exchangeCurrencyFlag" />
@@ -80,14 +76,14 @@
               </ng-container>
 
               <ng-container matColumnDef="Estimated Qty">
-                <th mat-header-cell *matHeaderCellDef>Estimated Qty</th>
+                <th mat-header-cell *matHeaderCellDef [ngClass]="isMobile ? 'p-r-10' : ''">Estimated Qty</th>
                 <td class="text-center" mat-cell *matCellDef="let element">
                   {{ element.estimatedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
                 </td>
               </ng-container>
 
               <ng-container matColumnDef="Requested Qty">
-                <th mat-header-cell *matHeaderCellDef>Requested Qty</th>
+                <th mat-header-cell *matHeaderCellDef [ngClass]="isMobile ? 'p-r-10' : ''">Requested Qty</th>
                 <td class="text-center" mat-cell *matCellDef="let element">
                   {{ element.requestedQty }} <span class="p-l-5">{{ element.materialUnit }}</span>
                 </td>
@@ -96,7 +92,7 @@
               <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
                 <th mat-header-cell *matHeaderCellDef class="fulfillment-date-col">Fullfillment Date</th>
                 <td mat-cell *matCellDef="let element; let i = index" class="fulfillment-date-col">
-                  <mat-form-field class="border-input" [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)">
+                  <mat-form-field class="border-input" [ngClass]="isMobile ? 'p-r-10' : ''" [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)">
                     <!-- <mat-label>Fullfil </mat-label> -->
                     <!-- <span class="form-placeholder">{{
                     materialForms["controls"]["forms"]["controls"][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]["controls"]["fullfilmentDate"].value
@@ -115,13 +111,12 @@
                   <span>({{ rfqData.rfqCurrency && rfqData.rfqCurrency.exchangeCurrencyName ? rfqData.rfqCurrency.exchangeCurrencyName : primaryCurrencyCode }})</span>
                 </th>
                 <td mat-cell *matCellDef="let element; let i = index">
-                  <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
+                  <mat-form-field [ngClass]="isMobile ? 'p-r-10' : ''" [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
                     <input matInput formControlName="estimatedRate" type="text" appTwoDigitDecimaNumber placeholder="Estimated Rate" min="0" />
                     <small
                       *ngIf="
-                        materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].hasError(
-                          'pattern'
-                        ) && materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].touched
+                        materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].hasError('pattern') &&
+                        materialForms['controls']['forms']['controls'][i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)]['controls']['estimatedRate'].touched
                       "
                       class="error-msg"
                     >
@@ -134,7 +129,7 @@
               <ng-container matColumnDef="Quantity">
                 <th mat-header-cell *matHeaderCellDef>Quantity</th>
                 <td mat-cell *matCellDef="let element; let i = index">
-                  <mat-form-field [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
+                  <mat-form-field [ngClass]="isMobile ? 'p-r-10' : ''" [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)" class="border-input table-input">
                     <input matInput formControlName="quantity" type="text" placeholder="Quantity" min="0" appTwoDigitDecimaNumber />
                   </mat-form-field>
                 </td>
@@ -170,12 +165,7 @@
 
               <ng-container matColumnDef="Upload Images">
                 <th mat-header-cell *matHeaderCellDef></th>
-                <td
-                  class="text-align-center"
-                  mat-cell
-                  *matCellDef="let element"
-                  [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
-                >
+                <td class="text-align-center" mat-cell *matCellDef="let element" [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
                   <!-- Upload Image Link -->
                   <a class="cursor-pointer issue-to-indent-icon" matTooltip="Add/Edit Image" (click)="uploadImage(element, 'rfq')">
                     <img class="width-20-px mt-1 mr-2" src="assets/images/upload-image-icon.svg" />
