--- a/src/app/features/po/po-table/po-table.component.html
+++ b/src/app/features/po/po-table/po-table.component.html
@@ -44,7 +44,7 @@
     <mat-accordion displayMode="flat" multi class="mat-table" formArrayName="forms" [ngClass]="isMobile ? 'res-table' : 'po-table'">
       <div [ngClass]="isMobile ? 'res-td' : ''">
         <section matSort class="mat-elevation-z2 mat-header-row">
-          <span class="mat-header-cell po-sno-width" mat-sort-header="vesselName">S.No</span>
+          <span class="mat-header-cell po-sno-width">S.No</span>
           <span class="mat-header-cell po-material-width"
             >Material Name <br />
             & Makes</span
