--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -38,17 +38,11 @@
     <div class="col-md-4 col-xs-12 text-right m-itm" [ngClass]="isMobile ? 'sm-btn1' : ''">
       <span (click)="selectCurrency()" class="text-decoration-underline main-color font-size-vary-grn p-r-10 text-semi-bold cursor-pointer">Select Currency</span>
       <span>
-        <button mat-raised-button matStepperNext [disabled]="!(form.valid && counter > 0)" (click)="materialAdded()" class="main-background-color main-button color-white">
-          Next
-        </button>
+        <button mat-raised-button matStepperNext [disabled]="!(form.valid && counter > 0)" (click)="materialAdded()" class="main-background-color main-button color-white">Next</button>
       </span>
     </div>
 
-    <div
-      class="col-md-12 col-xs-6 p-b-20 text-right m-itm"
-      *ngIf="addRfq.rfqCurrency != null && addRfq.rfqCurrency.exchangeCurrencyName != null"
-      [ngClass]="isMobile ? 'p-t-1-rem' : 'p-t-10'"
-    >
+    <div class="col-md-12 col-xs-6 p-b-20 text-right m-itm" *ngIf="addRfq.rfqCurrency != null && addRfq.rfqCurrency.exchangeCurrencyName != null" [ngClass]="isMobile ? 'p-t-1-rem' : 'p-t-10'">
       <span class="base-currency p-l-5 p-r-5" [ngClass]="isMobile ? 'fontsize-12-px mcrncy p-rem-r-5 p-rem-r-5' : 'p-t-10 p-b-10'">
         <span class="font-size-vary-grn color-grey">
           <img width="25px" *ngIf="addRfq.rfqCurrency.exchangeCurrencyFlag" [src]="addRfq.rfqCurrency.exchangeCurrencyFlag" />
@@ -83,13 +77,7 @@
             </mat-panel-title>
           </mat-expansion-panel-header>
           <div class="example-container mat-elevation-z8">
-            <table
-              #table
-              mat-table
-              [dataSource]="project.projectMaterialList | SearchPipe: searchMaterial:['materialName']"
-              class="po-custom-mat-width"
-              formArrayName="materialList"
-            >
+            <table #table mat-table [dataSource]="project.projectMaterialList | SearchPipe: searchMaterial:['materialName']" class="po-custom-mat-width" formArrayName="materialList">
               <ng-container matColumnDef="Material Name">
                 <th mat-header-cell *matHeaderCellDef>Material Name</th>
                 <td mat-cell *matCellDef="let element; let i = index" formGroupName="{{ i }}" [ngClass]="isMobile ? 'lbm' : ''">
@@ -104,13 +92,13 @@
                 </td>
               </ng-container>
               <ng-container matColumnDef="Required Date">
-                <th mat-header-cell class="text-center" *matHeaderCellDef>Required Date</th>
+                <th mat-header-cell class="text-center" [ngClass]="isMobile ? 'p-r-10' : ''" *matHeaderCellDef>Required Date</th>
                 <td class="text-center" mat-cell *matCellDef="let element; let i = index">
                   {{ element.dueDate | date: "dd-MMM-yyy" }}
                 </td>
               </ng-container>
               <ng-container matColumnDef="Requested Quantity">
-                <th mat-header-cell class="text-center" *matHeaderCellDef>Requested Quantity</th>
+                <th mat-header-cell class="text-center" [ngClass]="isMobile ? 'p-r-10' : ''" *matHeaderCellDef>Requested Quantity</th>
                 <td class="text-center" mat-cell *matCellDef="let element">
                   {{ element.requestedQty }}<span class="p-l-5">{{ element.materialUnit }}</span>
                 </td>
