rfp bids page design issues resoled

--- a/src/app/features/rfq/rfq-bids/rfq-bids.component.html
+++ b/src/app/features/rfq/rfq-bids/rfq-bids.component.html
@@ -54,7 +54,7 @@
                   <tr matSort class="mat-header-row">
                     <th class="mat-header-cell maxwidth-20">Material Name</th>
                     <th class="mat-header-cell maxwidth-10">Quantity</th>
-                    <th class="mat-header-cell maxwidth-10">Attached Images</th>
+                    <th class="mat-header-cell maxwidth-10 text-center">Attached Images</th>
                     <th class="mat-header-cell maxwidth-60">Makes & Rates</th>
                   </tr>
                 </table>
@@ -72,11 +72,12 @@
 
                       <td class="mat-cell maxwidth-10 text-center"></td>
 
+                      <!-- Makes name, quantity and rate column -->
                       <td class="mat-cell maxwidth-60">
-                        <tr class="mat-row makes-details-row">
+                        <tr class="mat-row makes-details-row makes-header-row">
                           <ng-container *ngFor="let brand of material.brandNames">
-                            <td class="mat-cell maxwidth-10 text-center">{{ brand }}</td>
-                            <td class="mat-cell maxwidth-15 text-center supplier-rate-col-bid">Supplier Rates
+                            <td class="mat-cell maxwidth-8 text-center">{{ brand }}</td>
+                            <td class="mat-cell maxwidth-17 text-center supplier-rate-col-bid">Rate
                               <span *ngIf="rfqProjects[0].rfqCurrency" class="p-r-5">({{ currency }})</span>
                             </td>
                           </ng-container>
@@ -115,13 +116,14 @@
                           </ng-template>
                         </td>
 
+                        <!-- Makes name, quantity and rate column -->
                         <td class="mat-cell maxwidth-60">
-                          <tr class="mat-row">
+                          <tr class="mat-row makes-details-row makes-body-row">
                             <ng-container formArrayName="brandGroup">
                               <ng-container *ngFor="let brandInfo of supplier.brandDetailList; let i = index" [formGroupName]="i">
-                                <td class="mat-cell maxwidth-10 text-center" style="overflow: initial">
+                                <td class="mat-cell maxwidth-8 text-center" style="overflow: initial">
                                   <ng-container *ngIf="brandInfo.materialUnitPrice !== null && brandInfo.materialUnitPrice !== 0; else dashedLine">
-                                    <mat-form-field class="border-input">
+                                    <mat-form-field class="border-input width-100">
                                       <input type="text" class="quantity" appTwoDigitDecimaNumber matInput 
                                       formControlName="quantity" placeholder="qty" min="0" (input)="getQuanityValidation(p, m)" />
                                     </mat-form-field>
@@ -132,7 +134,7 @@
                                   </ng-template>
                                 </td>
 
-                                <td class="mat-cell maxwidth-15 text-center supplier-rate-col-bid">
+                                <td class="mat-cell maxwidth-17 text-center supplier-rate-col-bid">
                                   {{
                                     brandInfo.materialUnitPrice != null
                                       ? ratesBaseCurr
@@ -146,8 +148,8 @@
                           </tr>
                         </td>                        
                       </tr>
-
                     </ng-container>
+
                   </div>
                 </ng-container>
               </mat-expansion-panel>
