--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -34,7 +34,7 @@
                 <td class="mat-cell text-center">{{ material.estimatedQty }}</td>
                 <td class="mat-cell text-center">{{ material.indentQnt }}</td>
                 <td class="mat-cell text-center">{{ material.dueDate | date: "dd MMM yyy" }}</td>
-                <td class="mat-cell text-center">{{ material.deliveredQty + material.directDeliveredQty }}</td>
+                <td class="mat-cell text-center">{{ material.deliveredQty }}</td>
                 <td class="mat-cell text-center">{{ material.issuedQty }}</td>
                 <td class="mat-cell text-center">{{ material.deliveredQty - material.issuedQty }}</td>
               </tr>
@@ -50,7 +50,7 @@
                   <td class="mat-cell text-center">{{ project.estimatedQty }}</td>
                   <td class="mat-cell text-center">{{ project.indentQnt }}</td>
                   <td class="mat-cell text-center">{{ project.dueDate | date: "dd MMM yyy" }}</td>
-                  <td class="mat-cell text-center">{{ project.deliveredQty + project.directDeliveredQty }}</td>
+                  <td class="mat-cell text-center">{{ project.deliveredQty }}</td>
                   <td class="mat-cell text-center">{{ project.issuedQty }}</td>
                   <td class="mat-cell text-center">{{ project.deliveredQty - project.issuedQty }}</td>
                 </tr>
