--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -47,7 +47,7 @@
                 <td class="mat-cell text-center">{{ material.estimatedQty }}</td>
                 <td class="mat-cell text-center">{{ material.indentQnt }}</td>
                 <td class="mat-cell text-center">{{ material.dueDate | date: "dd MMM yyy" }}</td>
-                <td class="mat-cell text-center">{{ material.deliveredQty + material.directDeliveredQty }}</td>
+                <td class="mat-cell text-center">{{ material.deliveredQty }}</td>
                 <td class="mat-cell text-center">{{ material.issuedQty }}</td>
                 <td class="mat-cell text-center">{{ material.deliveredQty - material.issuedQty }}</td>
               </tr>
