--- a/src/assets/scss/pages/signin-signup.scss
+++ b/src/assets/scss/pages/signin-signup.scss
@@ -300,3 +300,12 @@
     }
   }
 }
+
+
+.forget-pass-form{
+  .si-gn{
+    .mat-form-field-infix{
+      padding-bottom:0 !important;
+    }
+  }
+}
