--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -42,7 +42,8 @@
               <div class="col-xs-12">
                 <div class="row" *ngIf="this.callingCode === '+91'">
                   <div class="col-xs-4">
-                    <mat-form-field class="border-select mat-form-fiel-mm-padding select-country-code si-gn ">
+                    <mat-form-field
+                      class="border-select mat-form-fiel-mm-padding select-country-code si-gn display-block">
                       <mat-select formControlName="countryCode">
                         <div class="display-flex">
                           <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search Country"
@@ -77,7 +78,7 @@
                   </div>
 
                   <div class="col-xs-8">
-                    <mat-form-field class="border-input w-100">
+                    <mat-form-field class="border-input width-100 p-t-1">
                       <input matInput type="number" min="0"
                         onkeypress="return event.charCode >= 48 && event.charCode <= 57" formControlName="phone"
                         placeholder="Phone No." />
