--- a/src/app/features/dashboard/bom/bom.component.html
+++ b/src/app/features/dashboard/bom/bom.component.html
@@ -38,14 +38,14 @@
                             <ng-container *ngIf="!isMobile; else uploadIconOnly">
                                 <label for="fileDropRef" class="cursor-pointer upload-template m-t-8">
                                     <img src="assets/images/upload-arrow-icon.svg" alt="upload"
-                                        class="img-fluid m-r-5 height-25-px cursor-pointer" />
+                                        class="img-fluid m-r-5 cursor-pointer" />
                                     <a>Upload BOM Excel</a>
                                 </label>
                             </ng-container>
 
                             <ng-template #uploadIconOnly>
                                 <img src="assets/images/upload-arrow-icon.svg" alt="upload"
-                                    class="img-fluid m-r-2 height-25-px cursor-pointer" />
+                                    class="img-fluid m-r-2 cursor-pointer" />
                             </ng-template>
                         </div>
 
